--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,6 @@
     <string name="remove_video_relate_only_av_summary">上个选项的基础上，仅展示UP主投稿视频，移除番剧等内容</string>
     <string name="remove_video_cmd_dms_title">移除互动浮窗</string>
     <string name="remove_video_cmd_dms_summary">移除视频播放时浮窗出现的三连关注、关联视频、投票弹幕、评分弹幕等</string>
+    <string name="add_channel_title">添加频道按钮</string>
+    <string name="add_channel_summary">在底栏添加频道按钮（重启两次生效）</string>
 </resources>
